# ODI-Knowledge-backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  azure-pipelines.yml  pyproject.toml  research_request.md  run-backend.sh
agent/: agent_adapter.py  entry.py
agent/research/: __init__.py  pageindex_cache.py  prompts_cust.py  tools.py
api/: main.py  responses.py  serializers.py
api/routes/: completions.py  knowledge.py  messages.py  sessions.py
core/: config.py  database.py
docs/: API_SPEC.md  DATABASE_SETUP.md  KNOWLEDGE_SOURCE_URL_DESIGN.md  PAGEINDEX_INTEGRATION.md  QUICK_START.md  TOOL_PROCESS_STREAMING_DESIGN.md  smart-proposal-backend-session-api-analysis.md  smart-proposal-backend-session-api-analysis.zh.md
migrations/: env.py  script.py.mako
migrations/versions/: 20250115_000001_create_chat_tables.py
models/: __init__.py  entities.py  schemas.py
repositories/: __init__.py  message_repository.py  session_repository.py
scripts/: run_migrations.sh  update_container_app.sh
services/: __init__.py  chat_service.py  session_service.py  sse_service.py
tests/: test_api_chat.py  test_azure_openai.py  test_pageindex_integration.py  test_run_agent_stream.py  test_stream_vietnam.py
