[project]
name = "odi-knowledge-backend"
version = "0.1.0"
description = "ODI Knowledge Backend - FastAPI chatbot API with ODI enterprise knowledge base"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "aiomysql>=0.2.0",
    "greenlet>=3.0.0",
    "alembic>=1.13.0",
    "langchain-openai>=1.0.2",
    "langchain-anthropic>=1.0.3",
    "langchain_tavily>=0.2.13",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
    "markdownify>=1.2.0",
    "tavily-python>=0.5.0",
    "deepagents>=0.2.6",
    "langgraph>=1.0.3",
    "pageindex>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.1",
    "ruff>=0.14.5",
    "rich>=14.0.0",
    "langchain-google-genai>=3.1.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.20.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent", "agent.research"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "D",
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"
